--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "build": "gulp build"
   },
-  "author": "",
+  "author": "Rebecca",
   "license": "MIT",
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1"
   },
   "dependencies": {
-    "@types/node": "^14.10.1",
+    "@types/node": "^14.18.48",
     "foundry-pc-types": "gitlab:foundry-projects/foundry-pc/foundry-pc-types",
     "typescript": "^4.0.2"
   }
