--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "author": "Rebecca",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^8.42.0",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1"
   },
   "dependencies": {
     "@types/node": "^14.18.48",
     "foundry-pc-types": "gitlab:foundry-projects/foundry-pc/foundry-pc-types",
+    "lts": "^1.2.0",
     "typescript": "^4.0.2"
   }
 }
