--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "moduleResolution": "node",
-    "target": "ES6",
+    "target": "ESNext",
     "lib": ["DOM", "ES6", "ES2017", "ES2018"],
     "types": ["foundry-pc-types", "node"],
     "allowUmdGlobalAccess": true
