--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,20 +41,6 @@ jobs:
         manifest: https://github.com/${{github.repository}}/releases/latest/download/module.json
         download: https://github.com/${{github.repository}}/releases/latest/download/module.zip
 
-    # Update the 'latest' release
-    - name: Update Latest Release
-      id: create_latest_release
-      uses: ncipollo/release-action@v1
-      if: endsWith(github.ref, 'master')
-      with:
-        allowUpdates: true
-        name: Latest
-        draft: false
-        prerelease: false
-        token: ${{ secrets.GITHUB_TOKEN }}
-        artifacts: './dist/module.json, ./module.zip'
-        tag: latest
-
     #Substitute the Manifest and Download URLs in the module.json
     - name: Substitute Manifest and Download Links For Versioned Ones
       id: sub_manifest_link_version
@@ -67,9 +53,8 @@ jobs:
         download: https://github.com/${{github.repository}}/releases/download/${{steps.get-version.outputs.version}}/module.zip
     
     # Create a release for this specific version
-    - name: Create Version Release
-      id: create_version_release
-      uses: ncipollo/release-action@v1
+    - name: Create Release
+      uses: ncipollo/release-action@v1.12.0
       with:
         allowUpdates: true # set this to false if you want to prevent updating existing releases
         name: Release ${{ steps.get-version.outputs.version }}
