--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,9 +56,9 @@ jobs:
     - name: Create Release
       uses: ncipollo/release-action@v1.12.0
       with:
-        allowUpdates: true # set this to false if you want to prevent updating existing releases
+        replacesArtifacts: false
         name: Release ${{ steps.get-version.outputs.version }}
-        draft: false
+        draft: true
         prerelease: false
         token: ${{ secrets.GITHUB_TOKEN }}
         artifacts: './dist/module.json,./module.zip'
